--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,8 @@
 // Colors
+$brand-color: #FE4A49;
+$dark-color: #0C1821;
+$accent-color: #4392F1;
+$light-color: #F4F4F8;
 
 // Spacing (font sizes)
 $s-size: 1.2rem;
